Added 3 types of object showing in the device view

--- a/UserInterface/style/custom.css
+++ b/UserInterface/style/custom.css
@@ -15,3 +15,15 @@ body {
  .parallax-container {
        height: 12rem;
 }
+
+.side-spacing {
+    padding: 0 50px;
+}
+
+.card {
+    min-width: 300px !important;
+}
+
+main section {
+    margin-top: 50px;
+}
