--- a/UserInterface/views/devices.html
+++ b/UserInterface/views/devices.html
@@ -1,15 +1,85 @@
-<section>
-    <div class="card">
+<div class="border-transparent col l4 s12 m6">
+    <div class="card medium">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src=".\images\bulb.jpg">
+            <img class="activator" src=".\images\led.png">
         </div>
         <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">Light LED<i class="material-icons right">more_vert</i></span>
-          <p><a href="#">This is a link</a></p>
+            <span class="card-title activator grey-text text-darken-4">Light LED<i class="material-icons right">more_vert</i></span>
+            <div class="switch">
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
         </div>
         <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-          <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <span class="card-title grey-text text-darken-4">Lampadina<i class="material-icons right">close</i></span>
+            <p>
+                <ul>
+                    <li>Mac address</li>
+                    <li>Status</li>
+                </ul>
+
+                <input type="color"  value="#ff0000" />
+            </p>
         </div>
     </div>
-</section>
+</div>
+
+<div class="border-transparent col l4 s12 m6">
+    <div class="card medium">
+        <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src=".\images\door.jpg">
+        </div>
+        <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Porta<i class="material-icons right">more_vert</i></span>
+            <div class="switch">
+                <label>
+                    Closed
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    Open
+                </label>
+            </div>
+        </div>
+        <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Porta<i class="material-icons right">close</i></span>
+            <p>
+                <ul>
+                    <li>Mac address</li>
+                    <li>Status</li>
+                </ul>
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="border-transparent col l4 s12 m6">
+    <div class="card medium">
+        <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src=".\images\bulb.jpg">
+        </div>
+        <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Luce<i class="material-icons right">more_vert</i></span>
+            <div class="switch">
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Luce<i class="material-icons right">close</i></span>
+            <p>
+                <ul>
+                    <li>Mac address</li>
+                    <li>Status</li>
+                </ul>
+            </p>
+        </div>
+    </div>
+</div>
